--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -11,7 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:textColor="@color/colorWhite"
+        android:text="@string/weather_forecast"
+        android:background="@color/colorPrimary"/>
 
     <fragment
         android:id="@+id/frg"
@@ -32,6 +35,7 @@
         android:layout_height="20dp"
         android:layout_above="@+id/view"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/cross" />
+        android:src="@drawable/ic_place_24dp" />
+
 
 </RelativeLayout>
